  output formatting instead of bespoke formatting implementations.

* The rsyslog decoder now further parses the %SYSLOGTAG% variable. The
  fields.syslogtag no longer exists and is replaced by fields.programname and
  message.Pid (issue #677).

* Removed no-longer-used 'decoder_poolsize' global config setting.

Bug Handling
------------

* Use FindProcess instead of syscall.Kill to make the 'pid_file' configuration
  setting work on Windows (issue #807)

* Fix the SandboxFilter ReportMsg panic on termination/shutdown (issue #816)

* MultiDecoder with no 'order' set now fails on init instead of panicking on
  first message.

* Fix panic on SIGUSR1 caused by no reports in a given plugin category (issue
  #832).

Features
--------

* Added support for Lua sandbox preservation versioning (issue #701).

* Added support for unix datagram sockets to the UdpInput using net "unixgram"
  (issue #790).

* Add LogstreamInput seekjournal reporting to dashboard output (issue #445).

* Added a HyperLogLog library to the Lua sandbox using the Redis
  implementation http://antirez.com/news/75.

* Added an alert encoder to make the alert messages easier to read.

* Introduced Encoder plugin type (issue #417).

* Added a bloom filter to the Lua sandbox and created a unique items filter.

* Turned the MySQL slow query log examples into a deployed decoder and filter.

* Added an Nginx error log decoder (issue #785)

* Added the ability to preserve the webserver log line in message payload
  (issue #784)

* Added the optional 'pid_file' configuration setting (issue #777).

* Add anomaly, alert, annotation modules (issue #677)

* Added 'sample_denominator' global config setting to allow tweaking the
  sample interval when computing timing of certain operations, replacing prior
  hard-coded DURATION_SAMPLE_DENOMINATOR constant (issue #625).

* Added an Apache access log decoder based on the Apache 'LogFormat'
  configuration directive.
